--- a/frontend/home.html
+++ b/frontend/home.html
@@ -83,6 +83,20 @@
     .buttons button { font-size:14px; padding:10px 15px; }
     th, td { font-size:12px; padding:8px 10px; }
   }
+
+
+
+  
+
+@media (max-width: 400px) {
+  table {
+    max-width: 320px; /* un poco más estrecha que antes */
+  }
+  th, td {
+    padding: 6px 6px; /* menos espacio dentro de las celdas */
+    font-size: 11px;  /* texto más pequeño */
+  }
+}
 </style>
 </head>
 <body>
