--- a/frontend/history.html
+++ b/frontend/history.html
@@ -46,6 +46,73 @@
     cursor:pointer;
   }
   button:hover { background:#00bfff; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Tabla por defecto para tablets y desktops */
+table {
+  width: 100%;
+  max-width: 700px;
+  border-collapse: collapse;
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+  margin-bottom: 30px;
+  display: table;
+}
+
+/* Scroll en móviles pequeños */
+@media (max-width: 480px) {
+  table {
+    display: block;
+    max-width: 95%;
+    max-height: 60vh;
+    overflow-x: scroll; /* siempre horizontal */
+    overflow-y: scroll; /* siempre vertical */
+    -webkit-overflow-scrolling: touch;
+  }
+
+  th, td {
+    padding: 6px 6px;
+    font-size: 12px;
+    white-space: nowrap;
+  }
+
+  /* Scroll siempre visible y personalizado */
+  table::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  table::-webkit-scrollbar-track {
+    background: #e0f7ff;
+    border-radius: 4px;
+  }
+
+  table::-webkit-scrollbar-thumb {
+    background-color: #0d6efd;
+    border-radius: 4px;
+    border: 2px solid #e0f7ff;
+  }
+
+  /* Firefox */
+  table {
+    scrollbar-width: thin;
+    scrollbar-color: #0d6efd #e0f7ff;
+  }
+}
+
 </style>
 </head>
 <body>
