--- a/frontend/home.html
+++ b/frontend/home.html
@@ -97,6 +97,41 @@
     font-size: 11px;  /* texto más pequeño */
   }
 }
+
+/* Scroll para móviles en leaderboard */
+@media (max-width: 425px) {
+  #leaderboard {
+    display: block;
+    max-width: 100%;
+    max-height: 60vh; /* ajusta altura al 60% de la pantalla */
+    overflow-x: auto; /* scroll horizontal */
+    overflow-y: auto; /* scroll vertical si hace falta */
+    -webkit-overflow-scrolling: touch;
+  }
+
+  #leaderboard th, #leaderboard td {
+    padding: 6px 8px;
+    font-size: 11px;
+  }
+
+  /* Barra de scroll siempre visible */
+  #leaderboard::-webkit-scrollbar {
+    height: 8px;
+  }
+  #leaderboard::-webkit-scrollbar-track {
+    background: #e0f7ff;
+    border-radius: 4px;
+  }
+  #leaderboard::-webkit-scrollbar-thumb {
+    background-color: #0d6efd;
+    border-radius: 4px;
+    border: 2px solid #e0f7ff;
+  }
+  #leaderboard {
+    scrollbar-width: thin;
+    scrollbar-color: #0d6efd #e0f7ff;
+  }
+}
 </style>
 </head>
 <body>
