--- a/frontend/home.html
+++ b/frontend/home.html
@@ -99,13 +99,14 @@
 }
 
 /* Scroll para móviles en leaderboard */
+/* Scroll y ajuste para móviles y iPhone 11 */
 @media (max-width: 425px) {
   #leaderboard {
     display: block;
-    max-width: 100%;
-    max-height: 60vh; /* ajusta altura al 60% de la pantalla */
-    overflow-x: auto; /* scroll horizontal */
-    overflow-y: auto; /* scroll vertical si hace falta */
+    width: 100%;       /* Ocupa todo el ancho disponible */
+    max-width: 100%;   /* Evita que quede espacio a la derecha */
+    overflow-x: auto;  /* Scroll horizontal */
+    overflow-y: auto;  /* Scroll vertical si hace falta */
     -webkit-overflow-scrolling: touch;
   }
 
@@ -127,6 +128,8 @@
     border-radius: 4px;
     border: 2px solid #e0f7ff;
   }
+
+  /* Firefox */
   #leaderboard {
     scrollbar-width: thin;
     scrollbar-color: #0d6efd #e0f7ff;
