--- a/frontend/home.html
+++ b/frontend/home.html
@@ -103,16 +103,18 @@
 @media (max-width: 425px) {
   #leaderboard {
     display: block;
-    width: 100%;       /* Ocupa todo el ancho disponible */
-    max-width: 100%;   /* Evita que quede espacio a la derecha */
-    overflow-x: auto;  /* Scroll horizontal */
-    overflow-y: auto;  /* Scroll vertical si hace falta */
+    width: max-content;      /* Ajusta el ancho al contenido real */
+    max-width: 100%;         /* No excede el ancho de pantalla */
+    max-height: 60vh;
+    overflow-x: auto;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
   }
 
   #leaderboard th, #leaderboard td {
     padding: 6px 8px;
     font-size: 11px;
+    white-space: nowrap;     /* Evita que el texto se rompa */
   }
 
   /* Barra de scroll siempre visible */
@@ -128,8 +130,6 @@
     border-radius: 4px;
     border: 2px solid #e0f7ff;
   }
-
-  /* Firefox */
   #leaderboard {
     scrollbar-width: thin;
     scrollbar-color: #0d6efd #e0f7ff;
